@@ -1,5 +1,9 @@
 Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
+version 1.1.0:
+	* Added: gaim_utf8_salvage
+	* Added: binary relocation support in prefix.h
+
 version 1.0.0 (09/17/2004):
 	* Added: get_chat_name to the GaimPluginProtocolInfo struct
 	* Changed: gaim_blist_update_buddy_presence(), presence changed to
