@@ -25,8 +25,8 @@
 #define _GAIM_VERSION_H_
 
 #define GAIM_MAJOR_VERSION 1
-#define GAIM_MINOR_VERSION 0
-#define GAIM_MICRO_VERSION 4
+#define GAIM_MINOR_VERSION 1
+#define GAIM_MICRO_VERSION 0
 
 #define GAIM_VERSION_CHECK(x,y,z) ((x) == GAIM_MAJOR_VERSION && ((y) < GAIM_MINOR_VERSION || ((y) == GAIM_MINOR_VERSION && (z) <= GAIM_MICRO_VERSION))
 
